--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ button:active {
     gap: 0;
     user-select: none;
     -webkit-user-drag: none;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     box-shadow: 4px 4px rgba(204, 203, 217, 0.5);
 }
 
@@ -89,10 +89,7 @@ button:active {
 .sketch-pixel {
     height: 100%;
     flex: 1 1 calc(100% / 16);
-}
-
-.black-pixel {
-    background-color: black;
+    background-color: rgb(255, 255, 255);
 }
 
 .footer {
