--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ button:active {
     flex-direction: column;
     border-radius: 10px;
     background-color: rgba(204, 203, 217, 0.5);
-    padding: 2rem 3rem;
+    padding: 2rem 3rem 2rem 2rem;
 }
 
 .user-controls p {
@@ -80,7 +80,7 @@ button:active {
     user-select: none;
     -webkit-user-drag: none;
     background-color: rgb(255, 255, 255);
-    box-shadow: 4px 4px rgba(204, 203, 217, 0.5);
+    box-shadow: 2px 2px 2px 2px rgba(204, 203, 217, 0.5);
 }
 
 .sketch-container:hover {
