--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ input[type="text"], input[type="number"] {
     width: 100%;
     font-size: 1rem;
     padding: 4px;
+    margin: 10px 0;
 }
 
 button {
@@ -54,12 +55,15 @@ button:active {
     font-size: larger;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     border-radius: 10px;
     background-color: rgba(204, 203, 217, 0.5);
     padding: 2rem 3rem 2rem 2rem;
 }
 
-.user-controls p {
+.user-controls span {
+    display: block;
+    margin-bottom: 5px;
     font-weight: 700;
 }
 
